[package]
name = "ext-proc-load-tester"
version = "0.1.6"
edition = "2024"
description = "A load testing tool for Envoy external processing servers"
license = "MIT"
repository = "https://github.com/bonnetn/ext-proc-load-tester"
readme = "README.md"
keywords = ["load-testing", "envoy", "grpc", "performance"]
categories = ["development-tools", "web-programming"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.0"
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"
zstd = "0.13.3"

[build-dependencies]
tonic-build = "0.13.1"
