[package]
name = "ext-proc-load-tester"
version = "0.1.37"
edition = "2024"
description = "A load testing tool for Envoy external processing servers"
license = "MIT"
repository = "https://github.com/bonnetn/ext-proc-load-tester"
readme = "README.md"
keywords = ["load-testing", "envoy", "grpc", "performance"]
categories = ["development-tools", "web-programming"]
publish = false

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.0"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tonic = "0.14.0"
tonic-prost = "0.14.0"

[build-dependencies]
tonic-build = "0.14.0"
tonic-prost-build = "0.14.0"
